# Booking_website_project

./: pyproject.toml
config/: settings.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_rename_price_house_price_per_night_and_more.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_bio_user_birthdate_user_currency_and_more.py
