[tool.poetry]
name = "booking-project"
version = "0.1.0"
description = ""
authors = ["Hannes Cho <hoonsungcho11@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "booking_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"